--- a/tramites/templates/actualiza.html
+++ b/tramites/templates/actualiza.html
@@ -70,6 +70,11 @@
                 <label>ID:</label>
                     {{form.id}}
             </div>
+
+            <!-- <div class="cell large-4">
+                <label>Documentos:</label>
+                    {{form.documentos}}
+            </div> -->
             
             <div class="cell large-12" align = "center">
                 <button type="submit" class="success button">Actualizar</button>
