--- a/tramites/templates/header.html
+++ b/tramites/templates/header.html
@@ -11,7 +11,7 @@
           </ul> -->
         </li>
         <li><a href="/admin">Administrar</a></li>
-        <li><a href="#">Acerca</a></li>
+        <li><a href="/acerca">Acerca</a></li>
       </ul>
     </div>
     <div class="top-bar-right">
