--- a/tramites/templates/inventario/actualizar_empleadomodal.html
+++ b/tramites/templates/inventario/actualizar_empleadomodal.html
@@ -53,7 +53,7 @@
                 
                 <div class="cell large-12" align = "center">
                     <button type="submit" class="success button">Actualizar</button>
-                    <a class ="success button" href ="{% url 'Empleados' %}">Cancelar </a> 
+                    <a class ="success button" href ="{% url 'inventario_app:Empleados' %}">Cancelar </a> 
                   
                 </div>
                     
