--- a/tramites/templates/inventario/actualizar_ip.html
+++ b/tramites/templates/inventario/actualizar_ip.html
@@ -77,7 +77,7 @@
             
             <div class="cell large-12" align = "center">
                 <button type="submit" class="success button">Actualizar</button>
-                <a class ="success button" href ="{% url 'Ips' %}">Cancelar </a> 
+                <a class ="success button" href ="{% url 'inventario_app:Ips' %}">Cancelar </a> 
                 
             </div>
                 
