--- a/tramites/templates/inventario/actualizar_switch.html
+++ b/tramites/templates/inventario/actualizar_switch.html
@@ -57,7 +57,7 @@
             
             <div class="cell large-12" align = "center">
                 <button type="submit" class="success button">Actualizar</button>
-                <a class ="success button" href ="{% url 'Switches' %}">Cancelar </a> 
+                <a class ="success button" href ="{% url 'inventario_app:Switches' %}">Cancelar </a> 
               
             </div>
                 
