--- a/tramites/templates/inventario/list_by_swith.html
+++ b/tramites/templates/inventario/list_by_swith.html
@@ -14,9 +14,7 @@
         <h4 class= "cell">LISTADO DE IPS</h4>
 
         <div class="cell">
-        
             <table class="hover">
-                
                 <thead>
                 <tr>
                     <th width="50">Nro</th>
@@ -35,7 +33,6 @@
                 </thead>
                 <tbody>
                 {% for registro in  lista_switches %}
-        
                     <tr>
                     <td>{{forloop.counter}}</td>
                     <td>{{registro.direccion}}</td>
@@ -48,57 +45,57 @@
                     <td>{{registro.dependencia}}</td>
                     <td>{{registro.empleado}}</td>
                     <td>{{registro.observacion}}</td>
-                    <td><a class="button warning" href="{% url 'modificar_ip' registro.id %}">Editar</a></td>
+                    <td><a class="button warning" href="{% url 'inventario_app:modificar_ip' registro.id %}">Editar</a></td>
                     </tr>
                             
                 {% endfor %}
                 </tbody>
             </table>
-            </div>
-    <div class="cell">
-        {% if is_paginated %}
-        <nav aria-label="Pagination">
-            <ul class="pagination">
-            {% if page_obj.has_previous %}
-                <li class="pagination-previous">
-                <a href="?page={{page_obj.previous_page_number}}">Atras </a>
-                </li>
-                {% if page_obj.number > 5 %}
-                <li class="pagination.num_pages">
-                    <a href="?page=1">1</a>
-                </li>
-                {% endif %}
-            {% endif %}
-                    
-            {% for pagina in paginator.page_range %}
-                {% ifequal pagina page_obj.number  %}
-                <li class="current"><span class="show-for-sr">Pagina Nro</span> {{pagina}}</li>
-                {% else %}
-                {% if pagina > page_obj.number|add:'-5' and pagina < page_obj.number|add:'5'%}
-                    <li>
-                    <a href="?page={{pagina}}">{{ pagina }}</a>
-                    </li>
-                {% endif %}
-                {% endifequal %} 
-                    
-            {% endfor %}
-                    
-            {% if page_obj.has_next %}
-                <li class="ellipsis" aria-hidden="true"></li> 
-                <li class="pagination.num_pages">
-                <a href="?page={{page_obj.paginator.num_pages}}">{{ page_obj.paginator.num_pages}}</a>
-                </li>
-                {% if page_obj.number > 5 %}
-                <li class="pagination-next">
-                <a href="?page={{page_obj.next_page_number}}">Siguiente </a> 
-                </li>
-                {% endif %}
-            {% endif %}
-        
-                    
-            </ul>
-        </nav>
-        {% endif %}
         </div>
+        <div class="cell">
+            {% if is_paginated %}
+            <nav aria-label="Pagination">
+                <ul class="pagination">
+                {% if page_obj.has_previous %}
+                    <li class="pagination-previous">
+                    <a href="?page={{page_obj.previous_page_number}}">Atras </a>
+                    </li>
+                    {% if page_obj.number > 5 %}
+                    <li class="pagination.num_pages">
+                        <a href="?page=1">1</a>
+                    </li>
+                    {% endif %}
+                {% endif %}
+                        
+                {% for pagina in paginator.page_range %}
+                    {% ifequal pagina page_obj.number  %}
+                    <li class="current"><span class="show-for-sr">Pagina Nro</span> {{pagina}}</li>
+                    {% else %}
+                    {% if pagina > page_obj.number|add:'-5' and pagina < page_obj.number|add:'5'%}
+                        <li>
+                        <a href="?page={{pagina}}">{{ pagina }}</a>
+                        </li>
+                    {% endif %}
+                    {% endifequal %} 
+                        
+                {% endfor %}
+                        
+                {% if page_obj.has_next %}
+                    <li class="ellipsis" aria-hidden="true"></li> 
+                    <li class="pagination.num_pages">
+                    <a href="?page={{page_obj.paginator.num_pages}}">{{ page_obj.paginator.num_pages}}</a>
+                    </li>
+                    {% if page_obj.number > 5 %}
+                    <li class="pagination-next">
+                    <a href="?page={{page_obj.next_page_number}}">Siguiente </a> 
+                    </li>
+                    {% endif %}
+                {% endif %}
+            
+                        
+                </ul>
+            </nav>
+            {% endif %}
+            </div>
 </div>              
 {% endblock content %}
