Cambios Busquedas 23febrero

--- a/tramites/templates/inventario/listaipsempleado.html
+++ b/tramites/templates/inventario/listaipsempleado.html
@@ -57,7 +57,7 @@
       </tbody>
     </table>
   </div>
-  
+  <div>
     <div class="cell">
       {% if is_paginated %}
       <nav aria-label="Pagination">
