--- a/tramites/templates/base_home.html
+++ b/tramites/templates/base_home.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'css/foundation.min.css' %}">
+    <link rel="stylesheet" href="{% static 'js/vendor/jquery_confirm/jquery-confirm.min.css' %}">
     <title>
         
         {% block tittle%}
@@ -20,11 +21,21 @@
     {% block content %}
         
     {% endblock content %}
+    <footer class="footer">
+        <div class="container">
+            <span> Copyright &copy; Alcaldia 2020-2021 Wilson Ludeña, Ing.</span>
+        </div>
+
+    </footer>
     <script src="{% static 'js/vendor/jquery.js' %}"></script>
     <script src="{% static 'js/vendor/what-input.js' %}"></script>
     <script src="{% static 'js/vendor/foundation.min.js' %}"></script>
+    <script src="{% static 'js/vendor/jquery_confirm/jquery-confirm.min.js' %}"></script>
     <script>
         $(document).foundation();
+        
     </script>  
+    {%block javascript %}
+    {% endblock javascript %}
 </body>
 </html>
