--- a/tramites/templates/inventario/adddireccion.html
+++ b/tramites/templates/inventario/adddireccion.html
@@ -7,23 +7,91 @@
 {% block content %}
 
 {% include 'header.html' %}
-<form method="POST" class="form-inline">
-    {% csrf_token %}
-    <div class="col-xl-6 col-md-6 mb-6">
-        <h5>Añade Direccion</h5>
-        <div class="grid-container">
-            <div class="grid-x grid-padding-x">
-              <div class="medium-6 cell">
-                  {{form.as_p}}
-              </div>
+<div class="grid-container">
+    <div class="grid-x">
+        <h4 class="cell">
+            Anadir  Direccion IP
+        </h4>
+
+        {% if messages %}
+            {% for message in messages %}
+                <div class="message">
+                    {{message}}
+                </div>
+            {% endfor %}
+        {% endif %}
+        
+        <form class="cell callout grid-x grid-margin-x" method="POST">{% csrf_token %}
+            <div class="cell large-4">
+                
+                <label>Direccion IP
+                    {{form.direccion}}
+                </label>
             </div>
-            <div>
-                <button type="submit" class="success button">Guardar</button>
-            </div>   
-    </div>
+            
+            <div class="cell large-2">
+                <label>Tipo de Ip
+                    {{form.tipos}}
+                </label>
+            </div>
+            
+            <div class="cell large-4">
+                <label>Categoria
+                    {{form.categoria}}
+                </label>
+            </div>    
+
+            <div class="cell large-2">
+                <label>Equipo
+                    {{form.equipo}}
+                </label>
+            </div>
+            
+            <div class="cell medium-4">
+                <label>Mac Address:
+                    {{form.macaddress}}
+                </label>
+            </div>  
+            
+            
+            <div class="cell large-6">
+                <label>Switch:</label>
+                    {{form.switch}}
+            </div>
+            
+            <div class="cell large-2">
+                <label>Puerto:</label>
+                    {{form.puerto}}
+            </div>
+
+            <div class="cell auto">
+                <label>Dependencia:</label>
+                    {{form.dependencia}}
+            </div>
+
+            <div class="cell large-6">
+                <label>Empleado:</label>
+                    {{form.empleado}}
+            </div>
+            <div class="cell large-12">
+                <label>Observacion:</label>
+                    {{form.observacion}}
+            </div>
+
+           
+                <!-- fields = ['direccion', 'tipos', 'categoria', 'equipo', 'switch', 'puerto',
+                'dependencia', 'empleado', 'observacion', 'estado', 'macaddress'] -->
+
+            <div class="grid-container">        
+            <button type="submit" class="success button">Guardar</button>
+            <a type="button" class ="success button" href ="{% url 'inventario_app:Ips' %}">Cancelar </a>
+            </div>
+        </form>
+    </div>   
+</div>
     
     
-</form>
+
 
 
 {% endblock content %}
