--- a/tramites/templates/inventario/listaips.html
+++ b/tramites/templates/inventario/listaips.html
@@ -4,94 +4,80 @@
 {% include 'header.html' %}
 
 <div class="grid-container full">
-<h4 class="cell" align="center"> LISTADO DE IPS</h4>
-<div class="grid-x grid-margin-x">
-  <form class= "cell grid-x grid-margin-x"  method="GET">{% csrf_token %}
-    <div class="cell large-4">
-      <input type="text" id="kword" name="kword" placeholder="Ingrese Dirección IP">
-    </div>
-    <div class="cell large-2">
-      <button type="submit" class="success button">Consultar</button>
-    </div>
-  </form> 
-</div>  
+  <h4 class="cell" align="center"> LISTADO DE IPS</h4>
+  <div class="grid-x grid-margin-x">
+    <form class= "cell grid-x grid-margin-x"  method="GET">{% csrf_token %}
+      <div class="cell large-4">
+        <input type="text" id="kword" name="kword" placeholder="Ingrese Dirección IP">
+      </div>
+      <div class="cell large-2">
+        <button type="submit" class="success button">Consultar</button>
+      </div>
+    </form> 
+  </div>  
 
-<div class="grid-x grid-margin-x">
-  <div class="cell grid-x grid-margin-x">
-    <table class="hover">
-      <thead>
-        <tr>
-          <th width="50">Nro</th>
-            <th width="80">Direccion</th>
-            <th width="100">Tipo</th>
-            <th width="150">Categoria</th>
-            <th width="100">Mac Adress</th>
-            <th width="100">Equipo</th>
-            <th width="150">Switch</th>
-            <th width="80">Puerto</th>
-            <th width="100">Dependencia</th>
-            <th width="120">Empleado</th>
-            <th width="120">Observacion</th>
-            <th width="150">Accion</th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for registro in  lista_ips %}
 
-          <tr>
-            <td>{{forloop.counter}}</td>
-            <td>{{registro.direccion}}</td>
-            <td>{{registro.tipos}}</td>
-            <td>{{registro.categoria}}</td> 
-            <td>{{registro.macaddress}}</td>
-            <td>{{registo.equipo}}</td>
-            <td>{{registro.switch}}</td>
-            <td>{{registro.puerto}}</td>
-            <td>{{registro.dependencia}}</td>
-            <td>{{registro.empleado}}</td>
-            <td>{{registro.observacion}}</td>
-            <td><a class="button warning" href="{% url 'inventario_app:modificar_ip' registro.id %}">Editar</a></td>
-          </tr>
-                    
-        {% endfor %}
-      </tbody>
-    </table>
-  </div>
+
   
-    <div class="cell">
-      {% if is_paginated %}
-      <nav aria-label="Pagination">
-          <ul class="pagination">
-            {% if page_obj.has_previous %}
-            <li class="pagination-previous">
-              <a href="?page={{page_obj.previous_page_number}}">Atras </a>
-            </li>
-            {% endif %}
-            
-            {% for pagina in paginator.page_range %}
-              {% ifequal pagina page_obj.number  %}
-                <li class="current"><span class="show-for-sr">Pagina Nro</span> {{pagina}}</li>
-              {% else %}
-                {% if pagina > page_obj.number|add:'-3' and pagina < page_obj.number|add:'3'%}
-                  <li>
-                    <a href="?page={{pagina}}">{{ pagina }}</a>
-                  </li>
-                {% endif %}
-              {% endifequal %} 
-              <!-- <li class="ellipsis" aria-hidden="true"></li> -->
-            {% endfor %}
-            
-            {% if page_obj.has_next %}
-            <li class="pagination-next">
-              <a href="?page={{page_obj.next_page_number}}">Siguiente </a> 
-            </li>
-            {% endif %}
 
-            
-          </ul>
-      </nav>
-      {% endif %}
+  <div class="grid-x grid-margin-x">
+    <div class="cell grid-x grid-margin-x">
+      <table class="hover">
+        <thead>
+          <tr>
+            <th width="50">Nro</th>
+              <th width="80">Direccion</th>
+              <th width="100">Tipo</th>
+              <th width="150">Categoria</th>
+              <th width="100">Mac Adress</th>
+              <th width="100">Equipo</th>
+              <th width="150">Switch</th>
+              <th width="80">Puerto</th>
+              <th width="100">Dependencia</th>
+              <th width="120">Empleado</th>
+              <th width="120">Observacion</th>
+              <th width="150">Accion</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for registro in  lista_ips %}
+
+            <tr>
+              <td>{{forloop.counter}}</td>
+              <td>{{registro.direccion}}</td>
+              <td>{{registro.tipos}}</td>
+              <td>{{registro.categoria}}</td> 
+              <td>{{registro.macaddress}}</td>
+              <td>{{registo.equipo}}</td>
+              <td>{{registro.switch}}</td>
+              <td>{{registro.puerto}}</td>
+              <td>{{registro.dependencia}}</td>
+              <td>{{registro.empleado}}</td>
+              <td>{{registro.observacion}}</td>
+              <td><a class="button warning" data-open="exampleModal1" href="{% url 'inventario_app:modificar_ip' registro.id %}">Editar</a></td>
+
+              
+            </tr>
+                      
+          {% endfor %}
+        </tbody>
+      </table>
+      
     </div>
-</div>
+    
+    {% include 'inventario/paginacion.html' %}
+  </div>
+
 </div>
 {% endblock content %} 
+{% block javascript %}
+<script>
+  function abrir_popup(url) {
+      $('#popup').load(url, function () {
+          $(this).modal('show');
+      });
+      return false;
+  }
+
+</script>
+{% endblock javascript %}
