--- a/tramites/templates/inventario/actualizar_modal.html
+++ b/tramites/templates/inventario/actualizar_modal.html
@@ -1,16 +1,20 @@
+{% load static %}
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modal</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'css/foundation.min.css' %}">
+    <link rel="stylesheet" href="{% static 'js/vendor/jquery_confirm/jquery-confirm.min.css' %}">
+    <title>Editar IP</title>
 </head>
 <body>
-    <div class="reveal" id="exampleModal1" data-reveal>
-        <h1>Awesome. I Have It.</h1>
-        <p class="lead">Your couch. It is mine.</p>
-        <p>I'm a cool paragraph that lives inside of an even cooler modal. Wins!</p>
+    
+
+<div class="large reveal" id="exampleModal1" data-reveal>
+        
         <button class="close-button" data-close aria-label="Close modal" type="button">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -91,11 +95,15 @@
             
     </div>
     </div>
-    <div class="grid-container">
-        <p><button class="button" data-open="exampleModal1">Click me for a modal</button></p>
-    </div>
+    <p><button class="button" data-open="exampleModal1">Editar</button></p>
+    <script src="{% static 'js/vendor/jquery.js' %}"></script>
+    <script src="{% static 'js/vendor/what-input.js' %}"></script>
+    <script src="{% static 'js/vendor/foundation.min.js' %}"></script>
+    <script src="{% static 'js/vendor/jquery_confirm/jquery-confirm.min.js' %}"></script>
+    <script>
+        $(document).foundation();
+        
+    </script>  
 
 </body>
 </html>
-
-
