--- a/tramites/templates/base_home.html
+++ b/tramites/templates/base_home.html
@@ -37,5 +37,10 @@
     </script>  
     {%block javascript %}
     {% endblock javascript %}
+
+    <footer>
+        <p>Author: Wilson Ludeña, Ing.</p>
+        <p><a href="mailto:wludena@loja.gob.ec>Email.</a></p>
+      </footer>
 </body>
 </html>
