Cambios de Bitacora

--- a/tramites/templates/home.html
+++ b/tramites/templates/home.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 {% include 'header.html' %}
-    <h1>Pagina Inicial</h1>
+    
     <!-- inicio de la imagen de portada -->
     <div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
         <div class="orbit-wrapper">
@@ -31,11 +31,34 @@
             </li>
             <li class="orbit-slide">
               <figure class="orbit-figure">
+                <img class="orbit-image" src="{% static 'img/Lourdes.jpg' %}" alt="Space">
+                <figcaption class="orbit-caption">Lourdes</figcaption>
+              </figure>
+            </li>
+            <li class="orbit-slide">
+              <figure class="orbit-figure">
                 <img class="orbit-image" src="{% static 'img/SanSebastian.jpg' %}" alt="Space">
                 <figcaption class="orbit-caption">San Sebastian</figcaption>
               </figure>
             </li>
-            
+            <li class="orbit-slide">
+              <figure class="orbit-figure">
+                <img class="orbit-image" src="{% static 'img/Iglesia San Sebastian.jpg' %}" alt="Space">
+                <figcaption class="orbit-caption">Iglesia San Sebastian</figcaption>
+              </figure>
+            </li>
+            <li class="orbit-slide">
+              <figure class="orbit-figure">
+                <img class="orbit-image" src="{% static 'img/Puerta de La Ciudad.jpg' %}" alt="Space">
+                <figcaption class="orbit-caption">Puerta de la Ciudad</figcaption>
+              </figure>
+            </li>
+            <li class="orbit-slide">
+              <figure class="orbit-figure">
+                <img class="orbit-image" src="{% static 'img/Santo Domingo.jpg' %}" alt="Space">
+                <figcaption class="orbit-caption">Santo Domingo</figcaption>
+              </figure>
+            </li>
           </ul>
         </div>
         
@@ -50,7 +73,7 @@
                 <h5>Bienvenido al registro de Trámites Externos</h5>
                 <p>Aqui se registrará los trámites que se relacionan directamente con Alcaldia.</p>
                 <p>Esto nos permitirá agilitar los tramites locales.</p>
-                <a href="#">It's dangerous to go alone, take this.</a>
+                <a href="#">.</a>
             </div>
         </div>
 
