--- a/tramites/templates/base_home.html
+++ b/tramites/templates/base_home.html
@@ -6,13 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'css/foundation.min.css' %}">
     <link rel="stylesheet" href="{% static 'js/vendor/jquery_confirm/jquery-confirm.min.css' %}">
-    <title>
-        
-        {% block tittle%}
 
-        {% endblock tittle %}
+    {% block heads %}
+
+
+    {% endblock heads %}
+
+    {% block tittle%}
+
+    {% endblock tittle %}
             
-    </title>
+
 </head>
 
     
@@ -38,9 +42,6 @@
     {%block javascript %}
     {% endblock javascript %}
 
-    <footer>
-        <p>Author: Wilson Ludeña, Ing.</p>
-        <p><a href="mailto:wludena@loja.gob.ec>Email.</a></p>
-      </footer>
+    
 </body>
 </html>
